--- a/public/index.html
+++ b/public/index.html
@@ -70,6 +70,7 @@
         <br>
         <br>
         <button class="like">Like</button>
+        <button class ="delete">Delete</button>
         <hr>
         `
           document.getElementById('musicStorage').append(itemElem)
